src/index.css
html{
    background-color:  rgb(44, 133, 163);
    color: white;
}
.container-fluid{
background-color: rgb(44, 133, 163);
        color: black;
}

.todocard{
background-color:white;
    color: black;
}
input[type="text"] {
    background: transparent;
        
  
}

input[type="text"]:focus {
    background: transparent;

  
}
input[type="button"] {
background-color: lightblue;

}

input[type="button"]:focus {
    background: transparent;

}

